[gd_scene load_steps=9 format=3 uid="uid://dupuyshanfnw5"]

[ext_resource type="Script" uid="uid://cbnfv1tlfqwou" path="res://addons/trail_2d/trail_2d.gd" id="1_bta2m"]
[ext_resource type="Script" uid="uid://rtld2bl260y8" path="res://Scripts/ShaderLine.gd" id="1_jfhrg"]
[ext_resource type="Material" uid="uid://b1iwuc6c61lgx" path="res://Shaders/ShaderLine.res" id="2_65kwp"]

[sub_resource type="Curve" id="Curve_yagvw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.660907, 0.499171), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="LabelSettings" id="LabelSettings_g5i13"]
font_size = 32
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.611765)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vou4f"]
bg_color = Color(0.552941, 0.647059, 0.952941, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjyak"]
bg_color = Color(0.333333, 0.478431, 0.94902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_vniel"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_vou4f")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_cjyak")

[node name="ShaderLine" type="Node2D"]
script = ExtResource("1_jfhrg")
trail_length = 15.0
trail_width = 50.0

[node name="Trail" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="TrailLine" type="Line2D" parent="Trail"]
unique_name_in_owner = true
z_index = -5
material = ExtResource("2_65kwp")
points = PackedVector2Array(516, 113, 385, 237, 387, 381, 469, 446, 576, 415)
width = 100.0
width_curve = SubResource("Curve_yagvw")
default_color = Color(0.21783856, 0.97866255, 3.2504616, 1)
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("1_bta2m")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_right = 427.0
offset_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ParameterDisplay" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 0.27058825, 1)
layout_mode = 2
label_settings = SubResource("LabelSettings_g5i13")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LengthSlider" type="HSlider" parent="UI/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 2
theme = SubResource("Theme_vniel")
min_value = 5.0
value = 10.0

[node name="WidthSlider" type="HSlider" parent="UI/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 0, 1, 1)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 2
theme = SubResource("Theme_vniel")
min_value = 5.0
value = 20.0

[connection signal="value_changed" from="UI/HBoxContainer/VBoxContainer/LengthSlider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="UI/HBoxContainer/VBoxContainer/WidthSlider" to="." method="_on_width_slider_value_changed"]
